@@ -407,7 +407,7 @@ static void *lb_hb_create_config(apr_pool_t *p, server_rec *s)
 {
     lb_hb_ctx_t *ctx = (lb_hb_ctx_t *) apr_palloc(p, sizeof(lb_hb_ctx_t));
 
-    ctx->path = ap_server_root_relative(p, "logs/hb.dat");
+    ctx->path = ap_runtime_dir_relative(p, DEFAULT_HEARTBEAT_STORAGE);
 
     return ctx;
 }
@@ -442,7 +442,7 @@ static const char *cmd_lb_hb_storage(cmd_parms *cmd,
         return err;
     }
 
-    ctx->path = ap_server_root_relative(p, path);
+    ctx->path = ap_runtime_dir_relative(p, path);
 
     return NULL;
 }
